fix: 🐛 iconbutton on mobile topbar because of globals.css WARNING: TEMP FIX AND NOT LONG TERM SOLUTION

--- a/apps/next/src/app/globals.css
+++ b/apps/next/src/app/globals.css
@@ -2,8 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-  height: 100%;
+body {
   margin: 0;
 }
 
